Update .env.template with new configuration options
Add placeholders for CODE_PASS and CLOUDFLARE_TOKEN in the .env.template.

--- a/1_Server_Config/.env.template
+++ b/1_Server_Config/.env.template
@@ -14,5 +14,11 @@ CLOUDFLARE_TOKEN=eyJhIjoi...
 #main system가동
 #docker-compose up -d
 
+# Code-Server 접속 비밀번호
+CODE_PASS=사용자님이_원하는_비밀번호
+
+# Cloudflare Tunnel 토큰 (대시보드에서 받은 것)
+CLOUDFLARE_TOKEN=eyJhIjoiM... (아주 긴 문자열)
+
 #보안 시스템 가동
 #docker-compose -f docker-compose-auth.yml up -d
